--- a/opdrachten/BroodEnBanketv3/banket.html
+++ b/opdrachten/BroodEnBanketv3/banket.html
@@ -26,9 +26,11 @@
                   </div>
             </div>
             <div data-role="main" class="ui-content" style="text-align:center; font-size:20px;">
+                <!-- tekst wit maken dmv color:white; en font-size:30px; voor de leesbaarheid-->
                 <p style="color:white; font-size:30px;">Ons banket wordt elke dag vers voor u gebakken!</p>
                 <br>
                 
+                <!-- tekt plakken-->
                 <p>Een kijkje in ons assortiment:</p>
                 <ul>
                     <li>Arretjescake</li>
@@ -39,6 +41,7 @@
                     <li>Appelflap</li>
                 </ul>
                 <br>
+                <!-- dmv data-role collapsible zorgen dat t lijstje uitklapt-->
                 <div data-role="collapsible">
                     <h1>Nieuw:</h1>
                         <p>Mokka-slagroomtaart </p>
