--- a/opdrachten/MenuEfteling/MenuEfteling.html
+++ b/opdrachten/MenuEfteling/MenuEfteling.html
@@ -1,4 +1,4 @@
-<!-- broncode gekopieerd van efteling webapp op inf. actief-->
+<!-- broncode gekopieerd van efteling webapp op inf. actief. aangepast bij rode puntjes-->
 <!DOCTYPE html>
     <html class="ui-mobile">
     <head>
