--- a/opdrachten/TabelGraansoorten/tabelgraansoorten.html
+++ b/opdrachten/TabelGraansoorten/tabelgraansoorten.html
@@ -15,10 +15,12 @@
     </head>
     
     <body>
-        
+        <!-- dmv collumntoggle schaalt het beter-->
         <table class="ui-responsive" id="auto-table" data-mode="columntoggle"  data-role="table">
             <tr>
+                <!-- dmv data-priority aangeven welke kollommen het belangrijkste zijn en moeten blijven staan bij schalen -->
                 <th data-priority="persist"></th>
+                <!-- cellen inhoud en priotiry geven geven-->
                 <th data-priority="1">Volkoren
                     tarwemeel (2,4)</th>
                 <th data-priority="3">Speltmeel (4)</th>
