--- a/opdrachten/BroodEnBanketv3/index.html
+++ b/opdrachten/BroodEnBanketv3/index.html
@@ -5,21 +5,27 @@
         <title>index</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- stylesheet verbinden -->
         <link rel="stylesheet" href="css/themes/BroodBanket.css" />
         <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
         <link rel="stylesheet" href="css/themes/jquery.mobile.structure-1.4.5.min.css" /> 
+        <!-- script verbinden -->
         <script src="src/jquery-1.11.1.min.js"></script> 
         <script src="src/jquery.mobile-1.4.5.min.js"></script>
+        <!-- zorgen dat plaatje schaalt -->
         <style> img {max-width: 100%; max-height: 100%;} </style>
     </head>
     <body>
         <div data-role="page" id="pageone">
+            <!-- header maken -->
             <div data-role="header">
                 <h1>De Soete Suikerbol</h1>
              </div>
             <div data-role="header">
+                  <!-- bar met navigatie knoppen maken -->
                   <div data-role="navbar">
                     <ul>
+                      <!-- knoppen met linkjes -->    
                       <li><a href="index.html">Home</a></li>
                       <li><a href="brood.html">Brood</a></li>
                       <li><a href="banket.html">Banket</a></li>
@@ -27,15 +33,19 @@
                   </div>
             </div>
             <div data-role="main" class="ui-content" style="text-align:center; max-width: 100%; max-height: 100%;">
+                <!-- plaatje plakken-->
                 <img src="images/broodbanket.jpg">
+                <!-- tekst plakken-->
                 <p style="color:white;">Klik hier voor informatie over onze producten:</p>
+                <!-- linkjes plakken dmv data transistion zorgen dat het er gelikt uitziet -->
                 <a href="brood.html" data-transition="flip" ><input type="button" value="Ons Brood" data-icon="action"></a>  <br>
 	            <a href="banket.html" data-transition="flip"><input type="button" value="Ons Banket" data-icon="action"></a>
             </div>
-  
+            <!-- footer maken -->
             <div data-role="footer">
                 <div data-role="navbar">
                     <ul>
+                        <!-- linkjes en knoppen in bar-->
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="aanbiedingen.html">Week Aanbiedingen</a></li>
                         <li><a href="taarten.html">Verjaardags Taarten</a></li>
