--- a/opdrachten/PanelSwipeOpen/panelswipeopen.html
+++ b/opdrachten/PanelSwipeOpen/panelswipeopen.html
@@ -1,3 +1,4 @@
+<!-- broncode van informatica actief, zelf aangepast bij rode puntjes in kantlijn -->
 <!DOCTYPE html>
 <html class="ui-mobile">
     <head>
@@ -62,7 +63,7 @@
 	        $(function () {
 	            //dmv swiperight zorgen dat het panel opent met swipen naar rechts
                 $('body').on('swiperight', function () {
-                    //met #producten zorgen dat het panel links opent na swipen
+                    //met #producten zorgen dat het panel producten, dus links, opent na swipen
                     $('#producten').panel('open', '');
                 });
             }); 
